Migrate logging-fluentbit to kustomize

--- a/apps/base/logging-fluentbit/deploy/clusterRoleBinding.yaml
+++ b/apps/base/logging-fluentbit/deploy/clusterRoleBinding.yaml
@@ -9,4 +9,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: fluent-bit
-    namespace: {{ fluentbit.namespace }}
+    namespace: logging-fluentbit
