--- a/apps/base/logging-fluentbit/deploy/config/includes/output-fluentd.conf
+++ b/apps/base/logging-fluentbit/deploy/config/includes/output-fluentd.conf
@@ -8,5 +8,5 @@
     tls             On
     tls.verify      On
     tls.ca_file     /fluent-bit/certs/ca.crt
-    tls.crt_file    /fluent-bit/certs/server.crt
-    tls.key_file    /fluent-bit/certs/server.key
+    tls.crt_file    /fluent-bit/certs/tls.crt
+    tls.key_file    /fluent-bit/certs/tls.key
