--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -39,3 +39,4 @@
     - { role: infra-unifi,                      tags: kubernetes-app-infra-unifi,                      when: unifi_enabled | bool }
     - { role: infra-zonemta,                    tags: kubernetes-app-infra-zonemta,                    when: zonemta_enabled | bool }
     - { role: logging-elasticsearch,            tags: kubernetes-app-logging-elasticsearch,            when: elasticsearch_enabled | bool }
+    - { role: logging-fluentbit,                tags: kubernetes-app-logging-fluentbit,                when: fluentbit_enabled | bool }
