--- a/ansible/install_infra/roles/kubernetes_secrets_deploy/defaults/main.yaml
+++ b/ansible/install_infra/roles/kubernetes_secrets_deploy/defaults/main.yaml
@@ -52,3 +52,9 @@ openssl_custom_cert_secrets:
   kubernetes_replicator:
     pull_full_namespaces:
     - logging-elasticsearch
+- secret_name: "fluentbit"
+  pki_name: cluster
+  cert_name: fluentbit
+  kubernetes_replicator:
+    pull_full_namespaces:
+    - logging-fluentbit
