--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -40,3 +40,4 @@
     - { role: infra-zonemta,                    tags: kubernetes-app-infra-zonemta,                    when: zonemta_enabled | bool }
     - { role: logging-elasticsearch,            tags: kubernetes-app-logging-elasticsearch,            when: elasticsearch_enabled | bool }
     - { role: logging-fluentbit,                tags: kubernetes-app-logging-fluentbit,                when: fluentbit_enabled | bool }
+    - { role: logging-fluentd,                  tags: kubernetes-app-logging-fluentd,                  when: fluentd_enabled | bool }
